# domain/entities/revise_requests/__init__.py
@@ -1,0 +1,1 @@
+from .revise_request import ReviseRequest
